welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: not found: value faireCarre
  faireCarre
  ^PatternPicture:19: error: not found: value faireCarre
faireCarre() {
^